--- a/app/admin/templates/admin/admin_table.html
+++ b/app/admin/templates/admin/admin_table.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 <div class="app-main__inner">
-    <div class="app-page-title">
+    <div class="app-page-title" style="background-color: skyblue">
         <div class="page-title-wrapper">
             <div class="page-title-heading">
                 <div class="page-title-icon">
@@ -89,6 +89,8 @@
 </div>
 {% endblock %}
 
+{% block outer_footer %}
+{% endblock %}
 
 {% block modals %}
     
