--- a/app/auth/templates/auth/role_permission_inline.html
+++ b/app/auth/templates/auth/role_permission_inline.html
@@ -2,11 +2,11 @@
 
     {% for imodel in inline.data %}
         <tr>
-        <td scope="row"><strong>{{ imodel.model.description }}</strong></td>
-        <td><div class="position-relative form-check form-check-inline"><label class="form-check-label"><input {% if imodel.read %} checked {% endif %} type="checkbox" value="{{imodel.id}}" name="edit_chk_read_{{ imodel.id }}" class="permission-read form-check-input"/></label></div></td>
-        <td><div class="position-relative form-check form-check-inline"><label class="form-check-label"><input {% if imodel.create %} checked {% endif %} type="checkbox" value="{{imodel.id}}" name="edit_chk_create_{{ imodel.id }}" class="permission-create form-check-input"/></label></div></td>
-        <td><div class="position-relative form-check form-check-inline"><label class="form-check-label"><input {% if imodel.write %} checked {% endif %} type="checkbox" value="{{imodel.id}}" name="edit_chk_write_{{ imodel.id }}" class="permission-write form-check-input"/></label></div></td>
-        <td><div class="position-relative form-check form-check-inline"><label class="form-check-label"><input {% if imodel.delete %} checked {% endif %} type="checkbox" value="{{imodel.id}}" name="edit_chk_delete_{{ imodel.id }}" class="permission-delete form-check-input"/></label></div></td>
+        <td scope="row"><strong>{{ imodel['model_name']}}</strong></td>
+        <td><div class="position-relative form-check form-check-inline"><label class="form-check-label"><input {% if imodel['read'] %} checked {% endif %} type="checkbox" value="{{imodel.id}}" name="read_{{imodel['model_name']}}" class="permission-read form-check-input"/></label></div></td>
+        <td><div class="position-relative form-check form-check-inline"><label class="form-check-label"><input {% if imodel['create'] %} checked {% endif %} type="checkbox" value="{{imodel.id}}" name="create_{{imodel['model_name']}}" class="permission-create form-check-input"/></label></div></td>
+        <td><div class="position-relative form-check form-check-inline"><label class="form-check-label"><input {% if imodel['write'] %} checked {% endif %} type="checkbox" value="{{imodel.id}}" name="write_{{imodel['model_name']}}" class="permission-write form-check-input"/></label></div></td>
+        <td><div class="position-relative form-check form-check-inline"><label class="form-check-label"><input {% if imodel['delete'] %} checked {% endif %} type="checkbox" value="{{imodel.id}}" name="delete_{{imodel['model_name']}}" class="permission-delete form-check-input"/></label></div></td>
         </tr>
     {% endfor %}
 
