--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -4,7 +4,7 @@
 <div class="app-main__inner">
     <form action="" id="register_form" class="needs-validation" method="POST" novalidate>
         {{ form.csrf_token }}
-        <div class="app-page-title">
+        <div class="app-page-title" style="background-color: skyblue">
             <div class="page-title-wrapper">
                 <div class="page-title-heading">
                     <div class="page-title-icon">
