--- a/prime_admin/templates/lms/dashboard.html
+++ b/prime_admin/templates/lms/dashboard.html
@@ -3,7 +3,7 @@
 {% extends "admin/admin_base.html" %}
 {% block content %}
 <div class="app-main__inner">
-    <div class="app-page-title">
+    <div class="app-page-title" style="background-color: skyblue">
         <div class="page-title-wrapper">
             <div class="page-title-heading">
                 <div class="page-title-icon">
