--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -13,7 +13,8 @@
 
 {% block content %}
 <div class="app-main__inner">
-    <div class="app-page-title">
+
+    <div class="app-page-title" style="background-color: skyblue">
         <div class="page-title-wrapper">
             <div class="page-title-heading">
                 <div class="page-title-icon">
@@ -26,78 +27,202 @@
                     </div>
                 </div>
             </div>
-            
+
             {% block actions %}
 
-                {% if TABLE_OPTIONS['actions'] %}
-                    {% include TABLE_OPTIONS['action_template'] %}
-                {% endif %}
+            {% if TABLE_OPTIONS['actions'] %}
+            {% include TABLE_OPTIONS['action_template'] %}
+            {% endif %}
 
             {% endblock %}
-            
+
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="main-card mb-3 card">
-                    <div class="table-responsive">
+
+    <div>
+        <div class="row">
+            <div class="col-lg-6 col-xl-4">
+            </div>
+            <div class="col-lg-6 col-xl-4">
+                <div class="card mb-3 widget-content">
+                    <div class="widget-content-wrapper">
+                        <div class="widget-content-left">
+                            <div class="widget-heading">SALES TODAY</div>
+                            <div class="widget-subheading"></div>
+                        </div>
+                        <div class="widget-content-right">
+                            <div class="widget-numbers text-primary"><span>₱ 0.00</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-4">
+                DATE: 05/08/2021
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-xl-4">
+                <div class="card mb-3 widget-content">
+                    <div class="widget-content-wrapper">
+                        <div class="widget-content-left">
+                            <div class="widget-heading">TOTAL OF INSTALLMENT</div>
+                            <div class="widget-subheading"></div>
+                        </div>
+                        <div class="widget-content-right">
+                            <div class="widget-numbers text-success"><span>₱ 0.00</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-4">
+                <div class="card mb-3 widget-content">
+                    <div class="widget-content-wrapper">
+                        <div class="widget-content-left">
+                            <div class="widget-heading">TOTAL OF FULL PAYMENT</div>
+                            <div class="widget-subheading"></div>
+                        </div>
+                        <div class="widget-content-right">
+                            <div class="widget-numbers text-primary"><span>₱ 0.00</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-4">
+                <div class="card mb-3 widget-content">
+                    <div class="widget-content-wrapper">
+                        <div class="widget-content-left">
+                            <div class="widget-heading">TOTAL</div>
+                            <div class="widget-subheading"></div>
+                        </div>
+                        <div class="widget-content-right">
+                            <div class="widget-numbers text-warning"><span>₱ 0.00</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="main-card mb-3 card">
+            <div class="card-body">
+                <div class="form-row">
+                    <div class="col-md-4">
+                        <div class="position-relative form-group">
+                            <label for="billing_no" class="">Search</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend"><span class="input-group-text"><i class="pe-7s-search">
+                                        </i> </span></div>
+                                <input placeholder="Name" type="text" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                    </div>
+                    <div class="col-md-2">
+                        <div class="position-relative form-group">
+                            <label for="schedule" class="">Branch</label>
+                            <select name="schedule" id="schedule" class="form-control" required>
+                                <option value="">All</option>
+                            </select>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a schedule
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="position-relative form-group">
+                            <label for="schedule" class="">Batch No.</label>
+                            <select name="schedule" id="schedule" class="form-control" required>
+                                <option value="">All</option>
+                            </select>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a schedule
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="position-relative form-group">
+                            <label for="schedule" class="">Schedule</label>
+                            <select name="schedule" id="schedule" class="form-control" required>
+                                <option value="">All</option>
+                            </select>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a schedule
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="table-responsive">
                     <table id="index_table" class="align-middle mb-0 table table-bordered table-striped table-hover">
                         <thead>
-                        <tr>
-                            <th class="text-center"></th>
-                            {% for column in TABLE_OPTIONS['table_columns'] %}
-                            <th class="text-center">{{ column.upper() }}</th>
-                            {% endfor %}
-                        </tr>
+                            <tr>
+                                <th class="text-center"></th>
+                                {% for column in TABLE_OPTIONS['table_columns'] %}
+                                <th class="text-center">{{ column.upper() }}</th>
+                                {% endfor %}
+                            </tr>
                         </thead>
                         <tbody>
-                            
+    
                             {% for row_data in TABLE_OPTIONS['table_data'] %}
-
-                                {% if TABLE_OPTIONS['view_modal'] %}
-                                    <tr class="item row_object" id="{{row_data[0]}}"  data-toggle="modal" data-target="#viewModal">
-                                    <param id="param_{{row_data[0]}}" name="param_{{row_data[0]}}" {% if TABLE_OPTIONS['edit_url'] %} value="{{url_for(TABLE_OPTIONS['edit_url'],oid=row_data[0] | string)}}" {% endif %}>
+    
+                            {% if TABLE_OPTIONS['view_modal'] %}
+                            <tr class="item row_object" id="{{row_data[0]}}" data-toggle="modal" data-target="#viewModal">
+                                <param id="param_{{row_data[0]}}" name="param_{{row_data[0]}}" {% if
+                                    TABLE_OPTIONS['edit_url'] %}
+                                    value="{{url_for(TABLE_OPTIONS['edit_url'],oid=row_data[0] | string)}}" {% endif %}>
                                 {% else %}
-                                    <tr class="item row_object" id="{{row_data[0]}}">
+                            <tr class="item row_object" id="{{row_data[0]}}">
                                 {% endif %}
-
-                                    <!-- TEMPORARY conversion ng boolean word 'true' to 'YES' and 'false' to 'NO' -->
-                                    <td class="text-center"></td>
-
-                                    {% for value in row_data %}
-                                        {% if loop.index > 1 %}
-
-                                            <td class="text-center">
-                                                {% if value == none %}
-                                                <!-- pass -->
-                                                {% else %}
-                                                    {{value}}
-                                                {% endif %}
-                                            </td>
-
-                                        {% endif %}
-                                    {% endfor %}
-                                </tr>
+    
+                                <td class="text-center"></td>
+    
+                                {% for value in row_data %}
+                                {% if loop.index > 1 %}
+    
+                                <td class="text-center">
+                                    {% if value == none %}
+                                    {% else %}
+                                    {{value}}
+                                    {% endif %}
+                                </td>
+    
+                                {% endif %}
+                                {% endfor %}
+                            </tr>
                             {% endfor %}
-
+    
                         </tbody>
                     </table>
                 </div>
             </div>
+
+
         </div>
     </div>
 </div>
 {% endblock %}
 
+{% block outer_footer %}
+{% endblock %}
 
 {% block modals %}
-    
-    {% if TABLE_OPTIONS['create_modal'] and TABLE_OPTIONS['create_url'] %}
-        {% include TABLE_OPTIONS['create_modal_template'] %}
-    {% endif %}
 
-    {% if TABLE_OPTIONS['view_modal'] %}
-        {% include TABLE_OPTIONS['view_modal_template'] %}
-    {% endif %}
+{% if TABLE_OPTIONS['create_modal'] and TABLE_OPTIONS['create_url'] %}
+{% include TABLE_OPTIONS['create_modal_template'] %}
+{% endif %}
+
+{% if TABLE_OPTIONS['view_modal'] %}
+{% include TABLE_OPTIONS['view_modal_template'] %}
+{% endif %}
 
 {% endblock %}
