--- a/app/admin/templates/admin/admin_actions.html
+++ b/app/admin/templates/admin/admin_actions.html
@@ -39,7 +39,7 @@
                 {% if session['permissions'][RENDERED_MODEL.__amname__]['delete'] or current_user.is_superuser %}
                 <li id="nav_action_btns" class="nav-item">
                     {% block dropdown_buttons %}
-                    <button id="btndelete" type="button" tabindex="0" class="dropdown-item">Delete</button>
+                    <button disabled id="btndelete" type="button" tabindex="0" class="dropdown-item">Delete</button>
                     {% endblock %}
                 </li>
                 {% else %}
