--- a/app/admin/templates/admin/admin_edit_actions.html
+++ b/app/admin/templates/admin/admin_edit_actions.html
@@ -16,7 +16,7 @@
                     {% block dropdown_buttons %}
                     <form action="{{url_for('bp_admin.delete',table_name=EDIT_OPTIONS['table_name'],oid=OID,table_url=EDIT_OPTIONS['table_url'])}}" method="POST">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    <button type='submit' tabindex="0" class="dropdown-item">Delete</button>
+                    <button disabled type='submit' tabindex="0" class="dropdown-item">Delete</button>
                     </form>
                     {% endblock %}
                 </li>
