--- a/prime_admin/templates/lms/earnings.html
+++ b/prime_admin/templates/lms/earnings.html
@@ -14,7 +14,6 @@
 {% block content %}
 <div class="app-main__inner">
 
-
     <div class="app-page-title" style="background-color: skyblue">
         <div class="page-title-wrapper">
             <div class="page-title-heading">
@@ -40,17 +39,20 @@
     </div>
 
     <div class="main-card mb-3 card">
-        <div class="card-header"><i class="header-icon lnr-gift icon-gradient bg-grow-early">
-        </i>MARKETER'S NAME
+        <div class="card-header">
+            <div id="card_header_label">MARKETER'S NAME</div>
+        
         <div class="btn-actions-pane-right">
             <div class="nav">
 
                 <div class="dropleft btn-group">
-                    <button id="btnMunicipalityLabel" type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
+                    <button id="btn_marketer_label" type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
                         Select Markerter
                     </button>
-                    <div id="divMunicipalityButtons" tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="left-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-4px, 0px, 0px);">
-                        <button type="button" tabindex="0" class="dropdown-item btn-municipality">CEBU</button>
+                    <div id="div_marketer_buttons" tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="left-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-4px, 0px, 0px);">
+                        {% for marketer in TABLE_OPTIONS['marketers'] %}
+                            <button type="button" tabindex="0" class="dropdown-item btn-marketer">{{marketer.fname}}</button>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -80,7 +82,7 @@
                                 <div class="widget-subheading"></div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-warning"><span>₱ 1000000.00</span></div>
+                                <div class="widget-numbers text-warning"><span>₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
@@ -96,7 +98,7 @@
                                     <div class="widget-subheading">Total Earnings</div>
                                 </div>
                                 <div class="widget-content-right">
-                                    <div class="widget-numbers text-success">₱ 1000000.00</div>
+                                    <div class="widget-numbers text-success">₱ 0.00</div>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +113,7 @@
                                     <div class="widget-subheading">Total Earnings</div>
                                 </div>
                                 <div class="widget-content-right">
-                                    <div class="widget-numbers text-primary">₱ 1000000.00</div>
+                                    <div class="widget-numbers text-primary">₱ 0.00</div>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +128,7 @@
                                     <div class="widget-subheading">Total Earnings</div>
                                 </div>
                                 <div class="widget-content-right">
-                                    <div class="widget-numbers text-danger">₱ 1000000.00</div>
+                                    <div class="widget-numbers text-danger">₱ 0.00</div>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +143,7 @@
                                     <div class="widget-subheading">Total Earnings</div>
                                 </div>
                                 <div class="widget-content-right">
-                                    <div class="widget-numbers text-warning">₱ 1000000.00</div>
+                                    <div class="widget-numbers text-warning">₱ 0.00</div>
                                 </div>
                             </div>
                         </div>
@@ -188,7 +190,7 @@
             </div>
 
             <div class="table-responsive">
-                <table id="index_table" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                <table id="tbl_members" class="align-middle mb-0 table table-bordered table-striped table-hover">
                     <thead>
                         <tr>
                             <th class="text-center"></th>
@@ -198,37 +200,7 @@
                         </tr>
                     </thead>
                     <tbody>
-
-                        {% for row_data in TABLE_OPTIONS['table_data'] %}
-
-                        {% if TABLE_OPTIONS['view_modal'] %}
-                        <tr class="item row_object" id="{{row_data[0]}}" data-toggle="modal" data-target="#viewModal">
-                            <param id="param_{{row_data[0]}}" name="param_{{row_data[0]}}" {% if
-                                TABLE_OPTIONS['edit_url'] %}
-                                value="{{url_for(TABLE_OPTIONS['edit_url'],oid=row_data[0] | string)}}" {% endif %}>
-                            {% else %}
-                        <tr class="item row_object" id="{{row_data[0]}}">
-                            {% endif %}
-
-                            <!-- TEMPORARY conversion ng boolean word 'true' to 'YES' and 'false' to 'NO' -->
-                            <td class="text-center"></td>
-
-                            {% for value in row_data %}
-                            {% if loop.index > 1 %}
-
-                            <td class="text-center">
-                                {% if value == none %}
-                                <!-- pass -->
-                                {% else %}
-                                {{value}}
-                                {% endif %}
-                            </td>
-
-                            {% endif %}
-                            {% endfor %}
-                        </tr>
-                        {% endfor %}
-
+                            <!-- load with json -->
                     </tbody>
                 </table>
             </div>
