--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -41,9 +41,7 @@
 
     <div>
         <div class="row">
-            <div class="col-lg-6 col-xl-4">
-            </div>
-            <div class="col-lg-6 col-xl-4">
+            <div class="col-lg-2 col-xl-3">
                 <div class="card mb-3 widget-content">
                     <div class="widget-content-wrapper">
                         <div class="widget-content-left">
@@ -51,18 +49,13 @@
                             <div class="widget-subheading"></div>
                         </div>
                         <div class="widget-content-right">
-                            <div class="widget-numbers text-primary"><span>₱ 0.00</span></div>
+                            <div class="widget-numbers text-primary"><span id="sales_today">₱ 0.00</span></div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-xl-4">
-                DATE: 05/08/2021
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-lg-6 col-xl-4">
+            <div class="col-lg-2 col-xl-3">
                 <div class="card mb-3 widget-content">
                     <div class="widget-content-wrapper">
                         <div class="widget-content-left">
@@ -70,12 +63,12 @@
                             <div class="widget-subheading"></div>
                         </div>
                         <div class="widget-content-right">
-                            <div class="widget-numbers text-success"><span>₱ 0.00</span></div>
+                            <div class="widget-numbers text-success"><span id="total_installment">₱ 0.00</span></div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-xl-4">
+            <div class="col-lg-2 col-xl-3">
                 <div class="card mb-3 widget-content">
                     <div class="widget-content-wrapper">
                         <div class="widget-content-left">
@@ -83,12 +76,12 @@
                             <div class="widget-subheading"></div>
                         </div>
                         <div class="widget-content-right">
-                            <div class="widget-numbers text-primary"><span>₱ 0.00</span></div>
+                            <div class="widget-numbers text-primary"><span id="total_full_payment">₱ 0.00</span></div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-xl-4">
+            <div class="col-lg-2 col-xl-3">
                 <div class="card mb-3 widget-content">
                     <div class="widget-content-wrapper">
                         <div class="widget-content-left">
@@ -96,7 +89,7 @@
                             <div class="widget-subheading"></div>
                         </div>
                         <div class="widget-content-right">
-                            <div class="widget-numbers text-warning"><span>₱ 0.00</span></div>
+                            <div class="widget-numbers text-warning"><span id="total_payment">₱ 0.00</span></div>
                         </div>
                     </div>
                 </div>
@@ -112,7 +105,7 @@
                             <div class="input-group">
                                 <div class="input-group-prepend"><span class="input-group-text"><i class="pe-7s-search">
                                         </i> </span></div>
-                                <input placeholder="Name" type="text" class="form-control">
+                                <input disabled placeholder="Name" type="text" class="form-control">
                             </div>
                         </div>
                     </div>
@@ -120,9 +113,14 @@
                     </div>
                     <div class="col-md-2">
                         <div class="position-relative form-group">
-                            <label for="schedule" class="">Branch</label>
-                            <select name="schedule" id="schedule" class="form-control" required>
-                                <option value="">All</option>
+                            <label for="branch" class="">Branch</label>
+                            <select name="branch" id="branch" class="form-control" required>
+                                <option value="all">All</option>
+                                {% for branch in TABLE_OPTIONS['branches'] %}
+                                <option value="{{ branch.id }}">
+                                    {{ branch.name }}
+                                </option>
+                                {% endfor %}
                             </select>
                             <div class="valid-feedback">
                                 Looks good!
@@ -134,9 +132,14 @@
                     </div>
                     <div class="col-md-2">
                         <div class="position-relative form-group">
-                            <label for="schedule" class="">Batch No.</label>
-                            <select name="schedule" id="schedule" class="form-control" required>
-                                <option value="">All</option>
+                            <label for="batch_no" class="">Batch No.</label>
+                            <select name="batch_no" id="batch_no" class="form-control" required>
+                                <option value="all">All</option>
+                                {% for no in TABLE_OPTIONS['batch_numbers'] %}
+                                <option value="{{ no }}">
+                                    {{ no }}
+                                </option>
+                                {% endfor %}
                             </select>
                             <div class="valid-feedback">
                                 Looks good!
@@ -150,7 +153,12 @@
                         <div class="position-relative form-group">
                             <label for="schedule" class="">Schedule</label>
                             <select name="schedule" id="schedule" class="form-control" required>
-                                <option value="">All</option>
+                                <option value="all">All</option>
+                                {% for schedule in TABLE_OPTIONS['schedules'] %}
+                                <option value="{{ schedule }}">
+                                    {{ schedule }}
+                                </option>
+                                {% endfor %}
                             </select>
                             <div class="valid-feedback">
                                 Looks good!
@@ -162,45 +170,16 @@
                     </div>
                 </div>
                 <div class="table-responsive">
-                    <table id="index_table" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                    <table id="tbl_members" class="align-middle mb-0 table table-bordered table-striped table-hover">
                         <thead>
                             <tr>
-                                <th class="text-center"></th>
                                 {% for column in TABLE_OPTIONS['table_columns'] %}
                                 <th class="text-center">{{ column.upper() }}</th>
                                 {% endfor %}
                             </tr>
                         </thead>
                         <tbody>
-    
-                            {% for row_data in TABLE_OPTIONS['table_data'] %}
-    
-                            {% if TABLE_OPTIONS['view_modal'] %}
-                            <tr class="item row_object" id="{{row_data[0]}}" data-toggle="modal" data-target="#viewModal">
-                                <param id="param_{{row_data[0]}}" name="param_{{row_data[0]}}" {% if
-                                    TABLE_OPTIONS['edit_url'] %}
-                                    value="{{url_for(TABLE_OPTIONS['edit_url'],oid=row_data[0] | string)}}" {% endif %}>
-                                {% else %}
-                            <tr class="item row_object" id="{{row_data[0]}}">
-                                {% endif %}
-    
-                                <td class="text-center"></td>
-    
-                                {% for value in row_data %}
-                                {% if loop.index > 1 %}
-    
-                                <td class="text-center">
-                                    {% if value == none %}
-                                    {% else %}
-                                    {{value}}
-                                    {% endif %}
-                                </td>
-    
-                                {% endif %}
-                                {% endfor %}
-                            </tr>
-                            {% endfor %}
-    
+                            <!-- load with json -->
                         </tbody>
                     </table>
                 </div>
