--- a/prime_admin/templates/lms/earnings.html
+++ b/prime_admin/templates/lms/earnings.html
@@ -41,23 +41,27 @@
     <div class="main-card mb-3 card">
         <div class="card-header">
             <div id="card_header_label">MARKETER'S NAME</div>
-        
-        <div class="btn-actions-pane-right">
-            <div class="nav">
 
-                <div class="dropleft btn-group">
-                    <button id="btn_marketer_label" type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
-                        Select Markerter
-                    </button>
-                    <div id="div_marketer_buttons" tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="left-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-4px, 0px, 0px);">
-                        {% for marketer in TABLE_OPTIONS['marketers'] %}
-                            <button type="button" tabindex="0" class="dropdown-item btn-marketer">{{marketer.fname}}</button>
-                        {% endfor %}
+            <div class="btn-actions-pane-right">
+                <div class="nav">
+
+                    <div class="dropleft btn-group">
+                        <button id="btn_marketer_label" type="button" aria-haspopup="true" aria-expanded="false"
+                            data-toggle="dropdown" class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
+                            Select Markerter
+                        </button>
+                        <div id="div_marketer_buttons" tabindex="-1" role="menu" aria-hidden="true"
+                            class="dropdown-menu" x-placement="left-start"
+                            style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-4px, 0px, 0px);">
+                            {% for marketer in TABLE_OPTIONS['marketers'] %}
+                            <button value="{{marketer.id}}" type="button" tabindex="0"
+                                class="dropdown-item btn-marketer">{{marketer.fname}}</button>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
         <div class="card-body">
             <div class="row">
                 <div class="col-lg-6 col-xl-6">
@@ -68,12 +72,12 @@
                                 <div class="widget-subheading"></div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-success"><span>₱ 1000000.00</span></div>
+                                <div class="widget-numbers text-success"><span id="total_earnings">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
                 </div>
-        
+
                 <div class="col-lg-6 col-xl-6">
                     <div class="card mb-3 widget-content">
                         <div class="widget-content-wrapper">
@@ -82,34 +86,21 @@
                                 <div class="widget-subheading"></div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-warning"><span>₱ 0.00</span></div>
+                                <div class="widget-numbers text-warning"><span id="total_savings">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <ul class="list-group">
+
+            <ul id="list_branches_total_earnings" class="list-group">
+                {% for branch in TABLE_OPTIONS['branches'] %}
                 <li class="list-group-item">
                     <div class="widget-content p-0">
                         <div class="widget-content-outer">
                             <div class="widget-content-wrapper">
                                 <div class="widget-content-left">
-                                    <div class="widget-heading">Cebu</div>
-                                    <div class="widget-subheading">Total Earnings</div>
-                                </div>
-                                <div class="widget-content-right">
-                                    <div class="widget-numbers text-success">₱ 0.00</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="widget-content p-0">
-                        <div class="widget-content-outer">
-                            <div class="widget-content-wrapper">
-                                <div class="widget-content-left">
-                                    <div class="widget-heading">Tacloban</div>
+                                    <div class="widget-heading">{{branch.name}}</div>
                                     <div class="widget-subheading">Total Earnings</div>
                                 </div>
                                 <div class="widget-content-right">
@@ -119,36 +110,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item">
-                    <div class="widget-content p-0">
-                        <div class="widget-content-outer">
-                            <div class="widget-content-wrapper">
-                                <div class="widget-content-left">
-                                    <div class="widget-heading">Calbayog</div>
-                                    <div class="widget-subheading">Total Earnings</div>
-                                </div>
-                                <div class="widget-content-right">
-                                    <div class="widget-numbers text-danger">₱ 0.00</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="widget-content p-0">
-                        <div class="widget-content-outer">
-                            <div class="widget-content-wrapper">
-                                <div class="widget-content-left">
-                                    <div class="widget-heading">Bohol</div>
-                                    <div class="widget-subheading">Total Earnings</div>
-                                </div>
-                                <div class="widget-content-right">
-                                    <div class="widget-numbers text-warning">₱ 0.00</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
@@ -157,34 +119,32 @@
         <div class="card-body">
             <div class="form-row">
                 <div class="col-md-8">
-            <h5 class="card-title">MY MEMBERS</h5>
+                    <h5 class="card-title">MY MEMBERS</h5>
                 </div>
                 <div class="col-md-2">
                     <div class="position-relative form-group">
-                        <label for="schedule" class="">Branch</label>
-                        <select name="schedule" id="schedule" class="form-control" required>
-                            <option value="">All</option>
+                        <label for="branch" class="">Branch</label>
+                        <select name="branch" id="branch" class="form-control" required>
+                            <option value="all">All</option>
+                            {% for branch in TABLE_OPTIONS['branches'] %}
+                            <option value="{{ branch.id }}">
+                                {{ branch.name }}
+                            </option>
+                            {% endfor %}
                         </select>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please provide a schedule
-                        </div>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="position-relative form-group">
-                        <label for="schedule" class="">Batch No.</label>
-                        <select name="schedule" id="schedule" class="form-control" required>
-                            <option value="">All</option>
+                        <label for="batch_no" class="">Batch No.</label>
+                        <select name="batch_no" id="batch_no" class="form-control" required>
+                            <option value="all">All</option>
+                            {% for no in TABLE_OPTIONS['batch_numbers'] %}
+                            <option value="{{ no }}">
+                                {{ no }}
+                            </option>
+                            {% endfor %}
                         </select>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please provide a schedule
-                        </div>
                     </div>
                 </div>
             </div>
@@ -193,14 +153,13 @@
                 <table id="tbl_members" class="align-middle mb-0 table table-bordered table-striped table-hover">
                     <thead>
                         <tr>
-                            <th class="text-center"></th>
                             {% for column in TABLE_OPTIONS['table_columns'] %}
                             <th class="text-center">{{ column.upper() }}</th>
                             {% endfor %}
                         </tr>
                     </thead>
                     <tbody>
-                            <!-- load with json -->
+                        <!-- load with json -->
                     </tbody>
                 </table>
             </div>
