--- a/prime_admin/templates/lms/partner_edit.html
+++ b/prime_admin/templates/lms/partner_edit.html
@@ -4,6 +4,12 @@
 <script type="text/javascript">
     OID = "{{OID}}";
 </script>
+
+<style>
+    .myHiddenColumn {
+        display: none;
+    }
+</style>
 {% endblock %}
 
 
@@ -178,53 +184,58 @@
         </div>
 
     {% if FORM.inlines %}
-
-        {% for inline in FORM.inlines %}
-            <div class="main-card mb-3 card inlines-card">
-                <div class="card-body">
-                    <h5 class="card-title">{{ inline.__title__.upper() }}</h5>
-                    
-                    {% if inline.data %}
-                        <table id="{{inline.__table_id__}}" class="mb-0 table table-hover inline-table">
-                    {% else %}
-                        <table id="{{inline.__table_id__}}" class="mb-0 table table-hover">
-                    {% endif %}
-
-                        <thead>
-                            <tr>
-                                {% for column in inline.__table_columns__ %}
-
-                                    {% if column is not none %}
-                                        <th>{{ column.upper() }}</th>
-                                    {% else %}
-                                        <th style="display:none;"></th>
-                                    {% endif %}
-
+        <div class="row">
+            {% for inline in FORM.inlines %}
+            <div class="col-lg-6">
+                <div class="main-card mb-3 card inlines-card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ inline.__title__.upper() }}</h5>
+                        
+                        {% if inline.data %}
+                            <table id="{{inline.__table_id__}}" class="mb-0 table table-hover inline-table">
+                        {% else %}
+                            <table id="{{inline.__table_id__}}" class="mb-0 table table-hover">
+                        {% endif %}
     
-                                {% endfor %}
-                            </tr>
-                        </thead>
-
-                        <tbody>
-                            {% if inline.__html__ is not none %}
-                                {% include inline.__html__ %}
-                            {% endif %}
-                        </tbody>
-
-                    </table>
-
+                            <thead>
+                                <tr>
+                                    {% for column in inline.__table_columns__ %}
+    
+                                        {% if column is not none %}
+                                            <th>{{ column.upper() }}</th>
+                                        {% else %}
+                                            <th style="display:none;"></th>
+                                        {% endif %}
+    
+        
+                                    {% endfor %}
+                                </tr>
+                            </thead>
+    
+                            <tbody>
+                                {% if inline.__html__ is not none %}
+                                    {% include inline.__html__ %}
+                                {% endif %}
+                            </tbody>
+    
+                        </table>
+    
+                    </div>
+                    
+                    {% if inline.buttons %}
+                        <div class="d-block text-center card-footer">
+                            {% for button in inline.buttons %}
+                                {{button | safe}}
+                            {% endfor %}
+                        </div> 
+                    {% endif %}
+    
                 </div>
-                
-                {% if inline.buttons %}
-                    <div class="d-block text-center card-footer">
-                        {% for button in inline.buttons %}
-                            {{button | safe}}
-                        {% endfor %}
-                    </div> 
-                {% endif %}
-
             </div>
+         
         {% endfor %}
+        </div>
+
     {% endif %}
 </form>
 
