--- a/prime_admin/templates/lms/expenses.html
+++ b/prime_admin/templates/lms/expenses.html
@@ -69,7 +69,7 @@
                                 <div class="widget-subheading"></div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-success"><span>₱ 1000000.00</span></div>
+                                <div class="widget-numbers text-success"><span>₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
