--- a/prime_home/templates/prime_home/pre_register.html
+++ b/prime_home/templates/prime_home/pre_register.html
@@ -40,7 +40,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="suffix">Suffix :</label>
-                                <input type="text" name="suffix" id="suffix" required/>
+                                <input type="text" name="suffix" id="suffix"/>
                             </div>
                         </div>
                         <div class="form-row">
