--- a/prime_admin/templates/lms/expenses.html
+++ b/prime_admin/templates/lms/expenses.html
@@ -13,8 +13,6 @@
 
 {% block content %}
 <div class="app-main__inner">
-
-
     <div class="app-page-title" style="background-color: skyblue">
         <div class="page-title-wrapper">
             <div class="page-title-heading">
@@ -130,9 +128,9 @@
              
                 <div class="col-md-2">
                     <div class="position-relative form-group">
-                        <label for="schedule" class="">Description</label>
-                        <select name="schedule" id="schedule" class="form-control" required>
-                            <option value="">All</option>
+                        <label for="description" class="">Description</label>
+                        <select name="description" id="description" class="form-control" required>
+                            <option value="all">All</option>
                         </select>
                         <div class="valid-feedback">
                             Looks good!
@@ -158,47 +156,16 @@
             </div>
 
             <div class="table-responsive">
-                <table id="index_table" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                <table id="tbl_expenses" class="align-middle mb-0 table table-bordered table-striped table-hover">
                     <thead>
                         <tr>
-                            <th class="text-center"></th>
                             {% for column in TABLE_OPTIONS['table_columns'] %}
                             <th class="text-center">{{ column.upper() }}</th>
                             {% endfor %}
                         </tr>
                     </thead>
                     <tbody>
-
-                        {% for row_data in TABLE_OPTIONS['table_data'] %}
-
-                        {% if TABLE_OPTIONS['view_modal'] %}
-                        <tr class="item row_object" id="{{row_data[0]}}" data-toggle="modal" data-target="#viewModal">
-                            <param id="param_{{row_data[0]}}" name="param_{{row_data[0]}}" {% if
-                                TABLE_OPTIONS['edit_url'] %}
-                                value="{{url_for(TABLE_OPTIONS['edit_url'],oid=row_data[0] | string)}}" {% endif %}>
-                            {% else %}
-                        <tr class="item row_object" id="{{row_data[0]}}">
-                            {% endif %}
-
-                            <!-- TEMPORARY conversion ng boolean word 'true' to 'YES' and 'false' to 'NO' -->
-                            <td class="text-center"></td>
-
-                            {% for value in row_data %}
-                            {% if loop.index > 1 %}
-
-                            <td class="text-center">
-                                {% if value == none %}
-                                <!-- pass -->
-                                {% else %}
-                                {{value}}
-                                {% endif %}
-                            </td>
-
-                            {% endif %}
-                            {% endfor %}
-                        </tr>
-                        {% endfor %}
-
+                            <!-- load with json -->
                     </tbody>
                 </table>
             </div>
